fix: add z-index to gallery navigation buttons and adjust font size

--- a/assets/css/modules/slideshow.css
+++ b/assets/css/modules/slideshow.css
@@ -81,6 +81,7 @@
     font-family: var(--font-nav);
     font-size: 6rem;
     font-weight: 100;
+
 }
 
 .gallery-nav-btn:hover {
@@ -204,6 +205,7 @@
         margin: 0;
         border: none;
         border-top: 1px solid #333;
+        z-index: 2000;
     }
     
     .logo p { font-size: 1.8rem; padding-left: 10px;}
